fix height on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -28,9 +28,9 @@ body {
     font-size: 16px;
     color: var(--text-color);
     line-height: 1.3;
-    overflow-x: hidden;
+    overflow: hidden;
     scroll-behavior: smooth;
-    height: 100%;
+    max-height: 100%;
 }
 
 .header {
